--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>🌟 Advanced To-Do List</h2>
 
         <div class="task-input">
-            <input type="text" id="task" placeholder="Enter new task....">
+            <input type="text" id="task" placeholder="Enter new task.....">
             <button onclick="addTask()">Add</button>
         </div>
 
