--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced To-Do List</title>
+
     <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <h2>🌟 Advanced To-Do List</h2>
 
         <div class="task-input">
-            <input type="text" id="task" placeholder="Enter new task.....">
+            <input type="text" id="task" placeholder="Enter new task...">
             <button onclick="addTask()">Add</button>
         </div>
 
@@ -37,9 +39,10 @@
         </div>
     </div>
 
+
+
     <script src="script.js"></script>
 
-    
 </body>
 
 </html>
